Fix content shift on modal open

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,7 @@ html,
 body,
 :root {
   height: 100%;
+  overflow-x: hidden;
 }
 
 /* Custom Scrollbar */
